
**************************************************
*	       2.7 SERIES NEWS			 *
**************************************************

o matchPattern.Rnw vignette replaced by much improved GenomeSearching.Rnw
  vignette (still a work-in-progress).

o reverse(), complement() and reverseComplement() now preserve desc(x) when
  applied to BStringViews object x.

o matchPDict() now returns a PDictMatches object (new class) instead of a list
  of integer vectors. The user can then subset this PDictMatches object with [[,
  convert it into a list of integer vectors with as.list, or convert it into a
  set of views on the original subject with extractMatches(). Other functions
  can (and will) be added later in order to provide a wider choice of
  efficient conversion/extraction tools.
  WARNING: This is still a work-in-progress. Function names and semantics are
  not yet stabilized!

o Added the matchPDict() function for efficiently finding all occurences in
  a text (the subject) of any pattern from a set of patterns (the dictionary).
  See ?matchPDict for the details (especially the current limitations).

o Renamed Exfiles/ folder as extdata/ and put back fastaEx in it (from
  Biostrings 1).

o Added the dna2rna(), rna2dna(), transcribe() and cDNA() functions + a
  "reverseComplement" method for RNAString objects.

o Added the findPalindromes() function for basic support of palindrome finding.
  Also added related utility functions palindromeArmLength(),
  palindromeLeftArm() and palindromeRightArm().


**************************************************
*              2.6 SERIES NEWS                   *
**************************************************

o Added the matchLRPatterns() function for finding in a sequence patterns
  that are defined by a left and a right part.
  See ?matchLRPatterns for the details.
